test/files/neg/bug835.check
bug835.scala:2: error: no `: _*' annotation allowed here
(such annotations are only allowed in arguments to *-parameters)
  Console.println(List(List(1, 2, 3) : _*, List(4, 5, 6) : _*))
                                     ^
bug835.scala:2: error: no `: _*' annotation allowed here
(such annotations are only allowed in arguments to *-parameters)
  Console.println(List(List(1, 2, 3) : _*, List(4, 5, 6) : _*))
                                                         ^
two errors found
